--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <option value="løpesko">Løpesko</option>
                 <option value="joggesko">Joggesko</option>
                 <option value="sandaler">Sandaler</option>
+                <option value="sandaler">Erik Greide aldri oppgaven</option>
             </select>
             <input type="range" id="pris-filter" min="0" max="2000" value="2000">
             <span id="pris-verdi">Maks pris: 2000 kr</span>
