--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <div id="handlekurv-liste"></div>
             <p>Totalt: <span id="handlekurv-total">0</span> kr</p>
             <button id="kjop-knapp">Gå til kasse</button>
+            Erik har vært her
         </div>
     </div>
     <script src="main.js"></script>
